fix alignment of text

--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,9 @@ p{
 
 #research .section-text{
   text-align: center;
-  max-width: 36rem;
+  max-width: 34rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* PROJECTS SUBSECTION */
